feat: update template for completion

--- a/scripts/template/language/en-US.json
+++ b/scripts/template/language/en-US.json
@@ -9,22 +9,24 @@
   ],
   "options": [
     {
-      "name": "--version",
+      "name": "-V",
       "alias": [
-        "-V"
+        "--version"
       ],
       "tip": [
+        "U: -V, --version\n",
         "Show the version."
       ]
     }
   ],
   "common_options": [
     {
-      "name": "--help",
+      "name": "-h",
       "alias": [
-        "-h"
+        "--help"
       ],
       "tip": [
+        "U: -h, --help\n",
         "Show help."
       ]
     }
