--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -9,23 +9,25 @@
   ],
   "options": [
     {
-      "name": "--version",
+      "name": "-V",
       "alias": [
-        "-V"
+        "--version"
       ],
       "tip": [
-        "显示版本信息。"
+        "U: -V, --version\n",
+        "Show the version."
       ]
     }
   ],
   "common_options": [
     {
-      "name": "--help",
+      "name": "-h",
       "alias": [
-        "-h"
+        "--help"
       ],
       "tip": [
-        "显示帮助信息。"
+        "U: -h, --help\n",
+        "Show help."
       ]
     }
   ],
