feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -208,7 +208,8 @@
               "tip": [
                 "U: -T, --template <TEMPLATE>\n",
                 "Render each bookmark using the given template"
-              ]
+              ],
+              "next": 0
             },
             {
               "name": "--sort",
@@ -596,7 +597,8 @@
           "tip": [
             "U: -T, --template <TEMPLATE>\n",
             "Render each file diff entry using the given template"
-          ]
+          ],
+          "next": 0
         },
         {
           "name": "-s",
@@ -1442,6 +1444,41 @@
       "name": "resolve",
       "tip": [
         "Resolve conflicted files with an external merge tool"
+      ],
+      "options": [
+        {
+          "name": "-r",
+          "alias": [
+            "--revision"
+          ],
+          "tip": [
+            "U: -r, --revision <REVSETS>\n",
+            "The revision(s) to resolve. [Default: @]"
+          ],
+          "next": []
+        },
+        {
+          "name": "-l",
+          "alias": [
+            "--list"
+          ],
+          "tip": [
+            "U: -l, --list\n",
+            "Instead of resolving conflicts, list all the conflicts"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <NAME>\n",
+            "Specify 3-way merge tool to be used"
+          ],
+          "next": [
+            {
+              "name": "vscode"
+            }
+          ]
+        }
       ]
     },
     {
@@ -1750,6 +1787,19 @@
           "tip": [
             "U: l, list\n",
             "List tags"
+          ],
+          "options": [
+            {
+              "name": "-T",
+              "alias": [
+                "--template"
+              ],
+              "tip": [
+                "U: -T, --template <TEMPLATE>\n",
+                "Render each tag using the given template"
+              ],
+              "next": 0
+            }
           ]
         }
       ]
