--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -208,7 +208,8 @@
               "tip": [
                 "U: -T, --template <TEMPLATE>\n",
                 "使用给定模板渲染每个书签"
-              ]
+              ],
+              "next": 0
             },
             {
               "name": "--sort",
@@ -596,7 +597,8 @@
           "tip": [
             "U: -T, --template <TEMPLATE>\n",
             "使用给定模板渲染每个文件差异条目"
-          ]
+          ],
+          "next": 0
         },
         {
           "name": "-s",
@@ -1442,6 +1444,41 @@
       "name": "resolve",
       "tip": [
         "使用外部合并工具解决合并冲突"
+      ],
+      "options": [
+        {
+          "name": "-r",
+          "alias": [
+            "--revision"
+          ],
+          "tip": [
+            "U: -r, --revision <REVSETS>\n",
+            "要处理的修订版本 [默认：@]"
+          ],
+          "next": []
+        },
+        {
+          "name": "-l",
+          "alias": [
+            "--list"
+          ],
+          "tip": [
+            "U: -l, --list\n",
+            "不解决冲突，而是列出所有冲突"
+          ]
+        },
+        {
+          "name": "--tool",
+          "tip": [
+            "U: --tool <NAME>\n",
+            "指定要使用的三方合并工具"
+          ],
+          "next": [
+            {
+              "name": "vscode"
+            }
+          ]
+        }
       ]
     },
     {
@@ -1750,6 +1787,19 @@
           "tip": [
             "U: l, list\n",
             "列出标签"
+          ],
+          "options": [
+            {
+              "name": "-T",
+              "alias": [
+                "--template"
+              ],
+              "tip": [
+                "U: -T, --template <TEMPLATE>\n",
+                "使用给定的模板渲染每个标签"
+              ],
+              "next": 0
+            }
           ]
         }
       ]
