feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1580,7 +1580,7 @@
       "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.md<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> is simple, you just need to enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
+      "<@Blue>PSCompletions<@Cyan> is simple, enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> has a powerful completion menu, and here are some key bindings:\n",
       "  - Apply the selected completion item: <@Magenta>Enter<@Cyan> | <@Magenta>Space<@Cyan>\n",
@@ -1588,8 +1588,8 @@
       "  - Delete filter characters: <@Magenta>Backspace<@Cyan>\n",
       "  - Exit the completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
       "      - You can also use <@Magenta>Backspace<@Cyan> when there're no characters in the filter area.\n",
-      "  - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan>\n",
-      "  - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan>\n",
+      "  - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
+      "  - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> will take up two global names.\n",
       "  <@Magenta>PSCompletions<@Cyan>: A function name. The core function of the module export. (<@Magenta>psc<@Cyan> is actually its alias.)\n",
