feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1909,7 +1909,8 @@
       ],
       "done": [
         "<@Green>PSCompletions's configuration modified successfully!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}\n",
+        "<@Yellow>It may be necessary to restart PowerShell and re-import the PSCompletions module for the changes to take effect."
       ],
       "err": {
         "one_or_zero": [
