--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1916,7 +1916,8 @@
       ],
       "done": [
         "<@Green>PSCompletions 的配置修改成功!\n",
-        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}"
+        "<@Blue>{{ $config_item }}<@Green>: <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($old_value) }}<@Green> => <@Magenta>{{ $PSCompletions.quote_if_only_whitespace($new_value) }}\n",
+        "<@Yellow>可能需要重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效"
       ],
       "err": {
         "one_or_zero": [
