feat(scripts): update template

--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -15,7 +15,7 @@
       ],
       "tip": [
         "U: -V, --version\n",
-        "Show the version."
+        "显示版本信息。"
       ]
     }
   ],
@@ -27,7 +27,7 @@
       ],
       "tip": [
         "U: -h, --help\n",
-        "Show help."
+        "显示帮助信息。"
       ]
     }
   ],
