--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1742,7 +1742,7 @@
         "if($config.hooks -ne $null){$configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};};",
         "if($json.config){$configList += $json.config;};",
         " $config_list = $configList | ForEach-Object {",
-        "   \"`n<@Magenta>$($_.name)<@Blue>:`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
+        "   \"`n<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:`n默认值: $($PSCompletions.quote_if_only_whitespace($_.value))`n$($PSCompletions.replace_content($_.tip))\"",
         " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>----------------------------------\";",
