feat(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1739,8 +1739,11 @@
         "if($json.config -or $config.hooks -ne $null){",
         " \"<@Blue>---------- $($completion) 补全特殊配置 ---------- \";",
         "$configList = @();",
-        "if($config.hooks -ne $null){$configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};};",
-        "if($json.config){$configList += $json.config;};",
+        "if($config.hooks -ne $null){",
+        "  $configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
+        "  $configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
+        "};",
+        "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
         "   \"`n<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:`n默认值: $($PSCompletions.quote_if_only_whitespace($_.value))`n$($PSCompletions.replace_content($_.tip))\"",
         " };",
@@ -1793,12 +1796,12 @@
         " \"<@Blue>---------- $($completion) 补全特殊配置 ---------- \";",
         "$configList = @();",
         "if($config.hooks -ne $null){",
-        "$configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
-        "$configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
+        "  $configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
+        "  $configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
         "};",
-        "if($json.config){$configList += $json.config;};",
+        "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
-        "   \"`n<@Magenta>$($_.name)<@Blue>:`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
+        "   \"`n<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:`n默认值: $($PSCompletions.quote_if_only_whitespace($_.value))`n$($PSCompletions.replace_content($_.tip))\"",
         " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>----------------------------------\";",
