--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1732,8 +1732,11 @@
         " if($json.config -or $config.hooks -ne $null){",
         "\"<@Blue>---------- The special configuration of $($completion)---------- \";",
         "$configList = @();",
-        "if($config.hooks -ne $null){$configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};};",
-        "if($json.config){$configList += $json.config;};",
+        "if($config.hooks -ne $null){",
+        "  $configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
+        "  $configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
+        "};",
+        "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
         "  \"`n<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:`nDefault Value: $($PSCompletions.quote_if_only_whitespace($_.value))`n$($PSCompletions.replace_content($_.tip))\" ",
         " };",
@@ -1786,12 +1789,12 @@
         "\"<@Blue>---------- The special configuration of $($completion)---------- \";",
         "$configList = @();",
         "if($config.hooks -ne $null){",
-        "$configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
-        "$configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
+        "  $configList += @{name='enable_hooks';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks.tip};",
+        "  $configList += @{name='enable_hooks_tip';value=[int]$config.hooks;tip=$PSCompletions.info.completion.enable_hooks_tip.tip};",
         "};",
-        "if($json.config){$configList += $json.config;};",
+        "if($json.config){ $configList += $json.config; };",
         " $config_list = $configList | ForEach-Object {",
-        "  \"`n<@Magenta>$($_.name)<@Blue>:`nDefault Value: $($_.value)`n$($PSCompletions.replace_content($_.tip))\" ",
+        "  \"`n<@Magenta>$($PSCompletions.quote_if_only_whitespace($_.name))<@Blue>:`nDefault Value: $($PSCompletions.quote_if_only_whitespace($_.value))`n$($PSCompletions.replace_content($_.tip))\" ",
         " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>-------------------------------------------\";",
