feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -594,6 +594,12 @@
           "tip": [
             "push all branches"
           ]
+        },
+        {
+          "name": "--tags",
+          "tip": [
+            "push all tags"
+          ]
         }
       ]
     },
