--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -592,6 +592,12 @@
           "tip": [
             "推送所有分支"
           ]
+        },
+        {
+          "name": "--tags",
+          "tip": [
+            "推送所有标签"
+          ]
         }
       ]
     },
