feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1908,9 +1908,9 @@
     "menu": {
       "example": [
         "E: psc menu config enable_tip 0                     --- Hide completion tip\n",
+        "   psc menu config enable_enter_when_single 1       --- Auto-apply when there's only one completion item\n",
         "   psc menu symbol SpaceTab \"\"                      --- Hide symbol\n",
-        "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme\n",
-        "   psc menu config                                  --- Set menu configurations"
+        "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme"
       ],
       "done": [
         "<@Green>Configuration modified successfully!\n",
