--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1910,9 +1910,9 @@
     "menu": {
       "example": [
         "E: psc menu config enable_tip 0                     --- 不显示补全提示信息\n",
+        "   psc menu config enable_enter_when_single 1       --- 只有一个补全项时自动应用\n",
         "   psc menu symbol SpaceTab \"\"                      --- 隐藏符号\n",
-        "   psc menu line_theme single_line_round_border     --- 切换内置的边框线条主题\n",
-        "   psc menu config                                  --- 设置补全菜单配置"
+        "   psc menu line_theme single_line_round_border     --- 切换内置的边框线条主题"
       ],
       "done": [
         "<@Green>配置修改成功!\n",
